# nand2tetris-projects

./: .gitignore
01/: DMux8Way.hdl  Mux.hdl  Or8Way.hdl  Xor.hdl
02/: ALU.hdl  Add16.hdl  FullAdder.hdl
03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
04/fill/: Fill.asm  Fill.hack
04/mult/: Mult.asm
05/: CPU.hdl  Memory.hdl
06/assembler/: Cargo.toml  README.md
06/assembler/src/: code_translator.rs  config.rs  error.rs  lib.rs  main.rs  parser.rs  runner.rs  symbols.rs
06/assembler/tests/: integration_tests.rs
