[package]
name = "assembler"
version = "0.1.0"
authors = ["Rob Masters <rjcmasters@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0"
log = "0"
regex = "1"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
tempfile = "3"
